fix extra spacing between password field and login button

--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -203,8 +203,7 @@ p {
 
 .login-page {
   background-color: #003258;
-  min-height: 100vh;
-  //height: 100vh;
+  height: 100vh;
   display: block;
   flex-direction: column;
   font-family: Arial;
@@ -216,6 +215,7 @@ p {
       padding: 0 15px 0 0;
       margin: 0 auto 0 auto;
       .top-bar-header {
+        margin-left: 12px;
         display: block;
         font-size: 22px;
         color: #CCCCCC;
@@ -228,7 +228,6 @@ p {
     .content-container {
       max-width: 1170px;
       margin: 0 auto 0 auto;
-      //padding: 0 15px 0 15px;
       .content-container-left {
         font-family: 'Raleway', sans-serif;
         .upper-left {
@@ -244,7 +243,6 @@ p {
         }
       }
       .content-right {
-        //margin-left: 8.333%;
         padding-left: 10px;
         padding-right: 20px;
         .header {
@@ -256,9 +254,10 @@ p {
         }
         .password-icon {
           color: #A7A9Ac;
-          top: -37px;
-          left: -5px;
+          top: -40px;
+          left: -7px;
           float: right;
+          margin-bottom: -15px;
         }
         .password-container {
           display: block;
@@ -266,10 +265,9 @@ p {
         }
         input {
           width: 100%;
-          //min-width: 360px;
           background-color: #002644;
           border-color: #004981;
-          margin-bottom: 13px;
+          margin-bottom: 15px;
           padding: 6px 12px;
           color: #A7A9Ac;
         }
@@ -278,7 +276,6 @@ p {
         }
         button {
           height: 34px;
-          margin-bottom: 1em;
           width: 100%;
           background-color: #00C081;
           border-color: #00C081;
